--- a/src/pylowl/proj/brightside/README
+++ b/src/pylowl/proj/brightside/README
@@ -1,10 +1,35 @@
-This source is based on onlinehdp[1], which was in turn based on
+In this project you'll find online variational inference for the
+nested hierarchical Dirichlet process (nHDP, M0), among other things.
+The nHDP source is based on onlinehdp[1], which was in turn based on
 onlinelda[2], according to comments in the onlinehdp source.
-
 It has been thoroughly hacked up.
+
+demo.sh has a few comments---I suggest reading it.  At a high level, it
+builds littleowl with brightside, creates a toy concrete dataset from
+the source tree, runs M0 for a minute, and does all postprocessing
+needed for visualization.  When it's done, all that stands between you
+and an underwhelming topic tree is a web server.
+
+demo.sh should have all the steps you need to get going on real data.
+Note that concrete support is built in now, but you do need to
+extract a vocabulary mapping beforehand.  (This is demonstrated in
+demo.sh.  The zeroes are indices for section segmentation, sentence
+segmentation, and tokenization list.)  Also, we assume the data has
+already been divided into training and testing sets, and that all
+preprocessing has been performed.
+
+You can see command-line arguments for learning parameters, etc. with:
+$ python -m pylowl.proj.brightside.run_m0 -h
+(from the repository root, after doing:
+$ export PYTHONPATH="build/lib.linux-x86_64-2.7:$PYTHONPATH"
+or something similar)
+
+The data specifications are glob patterns so you'll end up doing
+something like:
+$ python -m pylowl.proj.brightside.run_m0 --data_path='/path/to/nested/data/*/*' --test_data_path='/path/to/nested/test_data/*/*' ...
+(note the quotes)
 
 [1] http://www.cs.cmu.edu/~chongw/software/onlinehdp.tar.gz
     (Wang, Paisley, and Blei (2011))
 [2] http://www.cs.princeton.edu/~blei/downloads/onlineldavb.tar
     (Hoffman, Blei, and Bach (2010))
-
