--- a/src/pylowl/proj/brightside/notes/notes.tex
+++ b/src/pylowl/proj/brightside/notes/notes.tex
@@ -348,7 +348,7 @@ Here we derive the coordinate ascent updates for the variational parameters.  No
 \end{align*}
 so, setting the partial derivative equal to zero and using the fact that the trigamma is positive in this context, we obtain
 \begin{align*}
-    \boxed{ \lambda_{jw} = \lambda_0 + \sum_d \sum_n \sum_i \delta_{z_i^{(d)}}(j) \delta_{W_{dn}}(w) \nu_{dn}(i) \trigamma{\lambda_{j w}} }.
+    \boxed{ \lambda_{jw} = \lambda_0 + \sum_d \sum_n \sum_i \delta_{z_i^{(d)}}(j) \delta_{W_{dn}}(w) \nu_{dn}(i) }.
 \end{align*}
 
 \begin{align*}
@@ -551,7 +551,7 @@ Some ways we could augment the following visualization:
 
 \subsection*{True model}
 
-In the generative story, we draw the global topics $\theta$ and stick-breaking weights $V_{\cdot}$, for each user we draw user-specific topics $\phi$ and stick-breaking weights $V_{\cdot}^{(u)}$, for each document of that user we draw a path $c_d$ from the tree and proportions over the levels $U_{\cdot} \sim \GEM(m, \pi)$ (relative stick lengths $U'_{\ell} \sim \Beta(m \pi, (1 - m) \pi)$ i.i.d.), and for each token in the document we draw a topic indicator $\zeta$ according to the level proportions $U$ and finally draw the word type $W$ from the corresponding $\phi$ (hence, $\theta$).  On the surface, the difference from the nHDP (M0), using the user--document metaphor, is that tokens for a user are drawn in a two-stage process from the local tree (the intermediate stage being documents), instead of being drawn directly from the local tree.
+In the generative story, we draw the global topics $\theta$ and stick-breaking weights $V_{\cdot}$, for each user we draw user-specific topics $\phi$ and stick-breaking weights $V_{\cdot}^{(u)}$, for each document of that user we draw a path $c_d^{(u)}$ from the tree and proportions over the levels $U'_{\cdot} \sim \GEM(m, \pi)$ (relative stick lengths $U_{\ell} \sim \Beta(m \pi, (1 - m) \pi)$ i.i.d.), and for each token in the document we draw a topic indicator $\zeta$ according to the level proportions $U$ and finally draw the word type $W$ from the corresponding $\phi$ (hence, $\theta$).  On the surface, the difference from the nHDP (M0), using the user--document metaphor, is that tokens for a user are drawn in a two-stage process from the local tree (the intermediate stage being documents), instead of being drawn directly from the local tree.
 
 The distribution on the relative stick lengths can alternatively be parameterized as $\Beta(\gamma_1, \gamma_2)$, like the distribution on the local switching probabilities in M0.
 
